Revision history for Perl extension Data::UUID.

1.220     2014-12-15
  - improve chances it'll work on Android (thanks, Brian Fraser)

1.219     2013-07-06
  - cygwin fixes (thanks, Reini Urban!)
  - Skip t/threads.t unless perl version is 5.13.4 or greater (thanks, VPIT)
  - compile with strict C89 compilers (thanks, VPIT)
  - more bugfixes (thanks, VPIT)

1.218
  - support for Haiku OS (thanks, Tony Cook!)

1.217 2010-09-14
  - documentation fixes
  - minor portability tweak to UUID.xs (thanks, Florian Ragwitz)

1.216 2010-09-04
  - documentation fixes only

1.215 2010-05-24
  - no changes, released as non-trial

1.214 TRIAL RELEASE 2010-05-14
  - Use gv_stashpv instead of gv_stashpvs (Florian Ragwitz)

1.213 TRIAL RELEASE 2010-05-07
  - Pass along the interpreter to ptable_store, if needed (Florian Ragwitz)

1.212 TRIAL RELEASE 2010-05-07
  - fix MANIFEST (thanks for noticing, Florian Ragwitz)

1.211 TRIAL RELEASE 2010-05-07
  - add a uniqueness test to threads.t (thanks, SCHWERN!)

1.210 TRIAL RELEASE 2010-05-07
  - thread safety, added by Florian Ragwitz

1.203 Tue Nov  3 16:46:50 EST 2009
  - avoid interactive configuration (thanks, DAXIM)

1.202 Mon Jun 15 18:42:19 EDT 2009
  - localize changes to $! (thanks, Jesse Vincent!)

1.201 Sat Apr 18 14:09 2009
  - replace Data-UUID's own md5 with Digest::MD5 (thanks, RUZ!)
  - apply patch from tokuhirom to avoid segmentation violation

1.149 Sat Nov  1 12:31 2008
  - added explicit BSD license; code is basically RFC4122 + patches

1.148 Thu Nov 16 10:21 2006
  - Debian has chosen to distribute their own Data::UUID, which has a different
    interface and breaks other modules.  They also use a grossly-inflated
    version number, which means that this version number must be inflated to
    allow modules to rely on the CPAN Data::UUID properly.

    Tests added to EXPLICITLY assert the one known difference between genuine
    Data::UUID and Debian's ersatz version in libossp-uuid-perl.
